--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">April Garden</span>
 								</a>
 
 							<!-- Nav -->
@@ -55,7 +55,7 @@
 								<h1>Hand-made french embroidery brooches<br />
 								핸드메이드 프랑스 자수 브로치</h1>
 								<!-- template designed by <a href="http://html5up.net">HTML5 UP</a>. -->
-								<p>하나하나, 한땀한땀...</p>
+								<p>모든 작업은 주문제작이며 커스터마이징이 가능합니다</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
