--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
 									<div class="field half">
-										<input type="Phone" name="Phone" id="Phone" placeholder="Phone" />
+										<input type="mail" name="mail" id="mail" placeholder="Phone" />
 									</div>
 									<div class="field">
 										<textarea name="message" id="message" placeholder="Message"></textarea>
