--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
 									<div class="field half">
-										<input type="mail" name="mail" id="mail" placeholder="Phone" />
+										<input type="email" name="email" id="email" placeholder="Phone" />
 									</div>
 									<div class="field">
 										<textarea name="message" id="message" placeholder="Message"></textarea>
@@ -200,7 +200,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>&copy; 010-5910-2776 </li>
+								<li>&copy; Untitled. All rights reserved</li><li> 전화번호 : 010-5910-2776 김애경 </li>
 							</ul>
 						</div>
 					</footer>
