--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
 									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Phone" />
+										<input type="tel" name="tel" id="tel" placeholder="Phone" />
 									</div>
 									<div class="field">
 										<textarea name="message" id="message" placeholder="Message"></textarea>
@@ -196,7 +196,7 @@
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<!--- <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li> --->
+									<!-- <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 								</ul>
 							</section>
 							<ul class="copyright">
