--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
 						<div class="inner">
 							<section>
 								<h2>Order Sheet</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:kickflipin@naver.com">
 									<div class="field half first">
 										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
 									<div class="field half">
-										<input type="tel" name="tel" id="tel" placeholder="Phone" />
+										<input type="text" name="Phone" id="phone" placeholder="Phone" />
 									</div>
 									<div class="field">
 										<textarea name="message" id="message" placeholder="Message"></textarea>
