--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
 						<div class="inner">
 							<section>
 								<h2>Order Sheet</h2>
-								<form method="post" action="mailto:kickflipin@naver.com">
+								<form method="post" action="http://fp1.formmail.com/cgi-bin/fm192">
+								<input type="hidden" name="_pid" value="151670">
+								<input type="hidden" name="_fid" value="VU305JTV">
+								<input type="hidden" name="recipient" value="bs.kickflipin@gmail.com">
 									<div class="field half first">
 										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
