--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 								<form method="post" action="http://fp1.formmail.com/cgi-bin/fm192">
 								<input type="hidden" name="_pid" value="151670">
 								<input type="hidden" name="_fid" value="VU305JTV">
-								<input type="hidden" name="recipient" value="bs.kickflipin@gmail.com">
+								<input type="hidden" name="recipient" value="1">
 									<div class="field half first">
 										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
@@ -203,7 +203,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li> 전화번호 : 010-5910-2776 김애경 </li>
+								<li>&copy; Untitled. All rights reserved</li><li> April Garden </li>
 							</ul>
 						</div>
 					</footer>
