--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="item1.html">
-										<h2><br /><br /><br /><br /><br />에델바이스</h2>
+										<h2>
+										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br />
+										에델바이스</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
