--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<a href="item1.html">
 										<h2>
 										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
 										에델바이스</h2>
 									</a>
 								</article>
@@ -74,10 +74,10 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="item2.html">
-										<h2>로즈(원형)</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										로즈(원형)</h2>
 									</a>
 								</article>
 								<article class="style3">
@@ -85,10 +85,10 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="item3.html">
-										<h2>로즈(타원형)</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										로즈(타원형)</h2>
 									</a>
 								</article>
 								<article class="style4">
@@ -96,10 +96,10 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="item4.html">
-										<h2>백장미</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										백장미</h2>
 									</a>
 								</article>
 								<article class="style5">
@@ -107,10 +107,10 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="item5.html">
-										<h2>핑크 리본</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										핑크 리본</h2>
 									</a>
 								</article>
 								<article class="style6">
@@ -118,10 +118,10 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="item6.html">
-										<h2>퍼플 진주</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										퍼플 진주</h2>
 									</a>
 								</article>
 								<article class="style2">
@@ -129,10 +129,10 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="item7.html">
-										<h2>퍼플 스파이더</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										퍼플 스파이더</h2>
 									</a>
 								</article>
 								<article class="style2">
@@ -140,10 +140,10 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="item8.html">
-										<h2>은방울</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										은방울</h2>
 									</a>
 								</article>
 								<article class="style2">
@@ -151,10 +151,10 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="item9.html">
-										<h2>그린 가든</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										그린 가든</h2>
 									</a>
 								</article>
 								<article class="style2">
@@ -162,10 +162,10 @@
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="item10.html">
-										<h2>플라워 가든</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
+										<h2>
+										<br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br />
+										플라워 가든</h2>
 									</a>
 								</article>
 							</section>
