--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<h1>Hand-made french embroidery brooches<br />
 								핸드메이드 프랑스 자수 브로치</h1>
 								<!-- template designed by <a href="http://html5up.net">HTML5 UP</a>. -->
-								<p>모든 작업은 주문제작이며 커스터마이징이 가능합니다</p>
+								<p>모든 작업은 주문제작이며<br /> 커스터마이징이 가능합니다</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -65,7 +65,7 @@
 									<a href="item1.html">
 										<h2>
 										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										에델바이스</h2>
 									</a>
 								</article>
@@ -75,8 +75,8 @@
 									</span>
 									<a href="item2.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										로즈(원형)</h2>
 									</a>
 								</article>
@@ -86,8 +86,8 @@
 									</span>
 									<a href="item3.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										로즈(타원형)</h2>
 									</a>
 								</article>
@@ -97,8 +97,8 @@
 									</span>
 									<a href="item4.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										백장미</h2>
 									</a>
 								</article>
@@ -108,8 +108,8 @@
 									</span>
 									<a href="item5.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										핑크 리본</h2>
 									</a>
 								</article>
@@ -119,8 +119,8 @@
 									</span>
 									<a href="item6.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										퍼플 진주</h2>
 									</a>
 								</article>
@@ -130,8 +130,8 @@
 									</span>
 									<a href="item7.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										퍼플 스파이더</h2>
 									</a>
 								</article>
@@ -141,8 +141,8 @@
 									</span>
 									<a href="item8.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										은방울</h2>
 									</a>
 								</article>
@@ -152,8 +152,8 @@
 									</span>
 									<a href="item9.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										그린 가든</h2>
 									</a>
 								</article>
@@ -163,8 +163,8 @@
 									</span>
 									<a href="item10.html">
 										<h2>
-										<br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										플라워 가든</h2>
 									</a>
 								</article>
