--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										에델바이스</h2>
 									</a>
+									<h2> edelvise</h2>
 								</article>
 								<article class="style2">
 									<span class="image">
