--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 										<br /><br /><br /><br /><br /><br /><br /><br /><br />
 										핑크 리본</h2>
 									</a>
+									<h2> pink ribbon </h2>
 								</article>
 								<article class="style6">
 									<span class="image">
