--- a/index.html
+++ b/index.html
@@ -63,12 +63,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="item1.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										에델바이스</h2>
 									</a>
-									<h2> edelvise</h2>
+									<h2><span align="center">에델바이스</span></h2>
 								</article>
 								<article class="style2">
 									<span class="image">
