--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									</span>
 									<a href="item1.html">
 									</a>
-									<h2><span align="center">에델바이스</span></h2>
+									<div style="text-align:center"><h2>에델바이스</h2></div>
 								</article>
 								<article class="style2">
 									<span class="image">
