--- a/index.html
+++ b/index.html
@@ -71,44 +71,32 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="item2.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										로즈(원형)</h2>
 									</a>
+									<div style="text-align:center"><h2>로즈(원형)</h2></div>
 								</article>
 								<article class="style3">
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="item3.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										로즈(타원형)</h2>
 									</a>
+									<div style="text-align:center"><h2>로즈(타원형)</h2></div>
 								</article>
 								<article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="item4.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										백장미</h2>
 									</a>
+									<div style="text-align:center"><h2>백장미</h2></div>
 								</article>
 								<article class="style5">
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="item5.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										핑크 리본</h2>
 									</a>
+									<div style="text-align:center"><h2>핑크 리본</h2></div>
 									<h2> pink ribbon </h2>
 								</article>
 								<article class="style6">
@@ -116,55 +104,40 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="item6.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										퍼플 진주</h2>
 									</a>
+									<div style="text-align:center"><h2>퍼플 진주</h2></div>
 								</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="item7.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										퍼플 스파이더</h2>
 									</a>
+									<div style="text-align:center"><h2>퍼플 스파이더</h2></div>
 								</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="item8.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										은방울</h2>
 									</a>
+									<div style="text-align:center"><h2>은방울</h2></div>
 								</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="item9.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										그린 가든</h2>
 									</a>
+									<div style="text-align:center"><h2>그린 가든</h2></div>
 								</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="item10.html">
-										<h2>
-										<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-										<br /><br /><br /><br /><br /><br /><br /><br /><br />
-										플라워 가든</h2>
 									</a>
+									<div style="text-align:center"><h2>플라워 가든</h2></div>
 								</article>
 							</section>
 						</div>
