--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="designer.html">Designer Info</a></li>
-							<li><a href="order.html">Order Form</a></li>
+							<li><a href="https://www.facebook.com/aekyeong.kim.3">Designer Info</a></li>
+							<li><a href="index.html">Order Form</a></li>
 							<!--- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
 					</nav>
@@ -97,7 +97,6 @@
 									<a href="item5.html">
 									</a>
 									<div style="text-align:center"><h2>핑크 리본</h2></div>
-									<h2> pink ribbon </h2>
 								</article>
 								<article class="style6">
 									<span class="image">
