--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hand-made french embroidery brooches</h1>
-								<h1>핸드메이드 프랑스 자수 브로치</h1>
+								<h1>Hand-made french embroidery brooches<br />
+								     핸드메이드 프랑스 자수 브로치</h1>
 								<!-- template designed by <a href="http://html5up.net">HTML5 UP</a>. -->
 								<p>모든 작업은 주문제작이며<br /> 커스터마이징이 가능합니다</p>
 							</header>
