--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<meta name="naver-site-verification" content="555062748b9f4c70b2d31f72538f0c8a580041a6"/>
 	<head>
 		<title>April's Garden Brooches</title>
 		<meta charset="utf-8" />
