--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 -->
 <html>
 	<meta name="naver-site-verification" content="555062748b9f4c70b2d31f72538f0c8a580041a6"/>
+	<title>핸드메이드 프랑스 자수 브로치</title>
+	<meta name="description" content="핸드메이드 프랑스 자수 브로치">
+	
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="핸드메이드 프랑스 자수 브로치">
+	<meta property="og:description" content="핸드메이드 프랑스 자수 브로치">
+	<meta property="og:image" content="http://aprilgarden.github.io/images/pic01.jpg">
+	<meta property="og:url" content="http://aprilgarden.github.io">
 	<head>
 		<title>April's Garden Brooches</title>
 		<meta charset="utf-8" />
