--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<meta name="naver-site-verification" content="555062748b9f4c70b2d31f72538f0c8a580041a6"/>
+	<meta name="google-site-verification" content="npMVZgix9HPhVeC8MEsW5Sxt5UaYqHHYSzS9W74OJSE" />
 	<title>핸드메이드 프랑스 자수 브로치</title>
 	<meta name="description" content="핸드메이드 프랑스 자수 브로치">
 	
