--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 								<h1>Hand-made french embroidery brooches<br />
 								     핸드메이드 프랑스 자수 브로치</h1>
 								<!-- template designed by <a href="http://html5up.net">HTML5 UP</a>. -->
-								<p>모든 작업은 주문제작이며<br /> 커스터마이징이 가능합니다</p>
+								<p>모든 작업은 주문제작이며<br /> 커스터마이징이 가능합니다<br />
+								각 3만원, 제작 및 배송 소요시간 : 1주일<br /></p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
