--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="https://www.facebook.com/aekyeong.kim.3">Designer Info</a></li>
-							<li><a href="index.html">Order Form</a></li>
+							<li><a href="#bottom">Order Form</a></li>
 							<!--- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
 					</nav>
@@ -154,10 +154,11 @@
 					</div>
 
 				<!-- Footer -->
+				<a name="bottom"></a>
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Order Sheet</h2>
+								<h2>Order Foam</h2>
 								<form method="post" action="http://fp1.formmail.com/cgi-bin/fm192">
 								<input type="hidden" name="_pid" value="151670">
 								<input type="hidden" name="_fid" value="VU305JTV">
@@ -197,19 +198,6 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			<script>
-  (function() {
-    var cx = '012679095649022731331:azgszirqkfa';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:search></gcse:search>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
