--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					</div>
 
 				<!-- Footer -->
-				<a name="bottom"></a>
+				<a name="bottom">test</a>
 					<footer id="footer">
 						<div class="inner">
 							<section>
