--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="https://www.facebook.com/aekyeong.kim.3" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<!-- <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
+									<li><a href="https://www.instagram.com/aprilgarden_/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
