--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="https://www.facebook.com/aekyeong.kim.3">Designer Info</a></li>
+							<li><a href="http://blog.naver.com/april7474">Naver Blog</a></li>
 							<li><a href="#bottom">Order Form</a></li>
 							<!--- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
