--- a/index.html
+++ b/index.html
@@ -211,5 +211,8 @@
 
 </script>
 
+	
+<script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script> <script type="text/javascript"> if(!wcs_add) var wcs_add = {}; wcs_add["wa"] = "13cb5d9733b0930"; wcs_do(); </script>
+
 	</body>
 </html>
